--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,143 @@
+@import 'global.scss';
 /* fonts */
-
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 /* vars */
-:root {}
+:root {
+    --primary-color: red;
+    --sm: 600px;
+    --dark-bs: 0 0 60px rgba(255, 255, 255, .18);
+    --light-bs: 0 0 60px rgba(50, 50, 93, .18);
+    --bg-color: #D5DCE7;
+    --blue-color: #635BFF;
+    --text-color: #0A2540;
+    --dark-bg-color: #0a2540;
+    --dark-card-color: #113F6C;
+
+}
+
+
 
 /* reset */
-* {}
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+ul {
+    list-style: none;
+}
+
+body {
+    line-height: 1.5;
+    box-shadow: 0 0 60px rgba(50, 50, 93, .18) box-shadow;
+}
+
+
+
+.dark {
+
+    --bg: var(--dark-bg-color);
+    --text-color: #fff;
+    --card-bg: var(--dark-card-color);
+    box-shadow: 0 0 60px rgba(255, 255, 255, .18);
+}
+
+.light {
+    --bg: var(--bg-color);
+    --text-color: #0D3256;
+    --card-bg: white;
+    box-shadow: 0 0 60px rgba(50, 50, 93, .18);
+}
+
+.he {
+    direction: rtl;
+    font-family: 'Rubik'
+
+}
+
+.en {
+    direction: ltr;
+    font-family: 'Poppins'
+}
+
+.all {
+    color: var(--text-color);
+    background-color: var(--bg);
+}
+
+
+.btn {
+    animation-name: color-change;
+    animation-duration: 12s;
+    animation-iteration-count: inherit;
+}
+
+@keyframes color-change {
+    0% {
+        background-color: red;
+    }
+
+    25% {
+        background-color: green;
+    }
+
+    50% {
+        background-color: blue;
+    }
+
+    75% {
+        background-color: yellow;
+    }
+}
+
+.card {
+    background-color: var(--card-bg);
+}
+
+header {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    font-weight: 700;
+
+    .dark {
+        background-color: #0d3256;
+        box-shadow: 0 0 60px rgba(255, 255, 255, .18);
+
+    }
+
+    .light {
+        background-color: #fff;
+        box-shadow: 0 0 60px rgba(50, 50, 93, .18);
+    }
+}
+
+.p {
+    margin-bottom: 1em;
+}
+
+h2 {
+
+    margin-bottom: .5em;
+
+}
+
+h3 {
+
+    margin-bottom: .5em;
+}
+
+footer {
+    background-color: #0a2540;
+    color: #fff;
+    text-align: center;
+    padding: 10px 20px;
+
+    p {
+        margin-bottom: 1em
+    }
+}
